bynkc/tests/fixtures/positive/243_property_passes/src/commerce/money.bynk
commons commerce.money

type Percent = Int where InRange(0, 100)
