bynkc/tests/fixtures/negative/24_let_shadows_type/input.bynk
commons test {
  type Reps = Int where InRange(1, 100)

  fn f(n: Int) -> Int {
    let Reps = n
    Reps
  }
}
